# agent-hook-pack

./: .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release-artifacts.yml
docs/brand/: README.md
examples/: demo.py
src/agent_hook_pack/: __init__.py  cli.py  hook_pack.py
src/agent_hook_pack/hooks/: block-secrets.py  check-branch.sh  check-env-sync.sh  lint-on-save.sh  verify-no-secrets.sh
tests/: test_agent_hook_pack.py
